[gd_scene load_steps=14 format=2]

[ext_resource path="res://entities/player/player.glb" type="PackedScene" id=1]
[ext_resource path="res://entities/player/player.gd" type="Script" id=2]
[ext_resource path="res://entities/player/camera.gd" type="Script" id=3]
[ext_resource path="res://assets/zapsplat_cartoon_character_voice_high_pitched_ouch_ohh_as_if_sudden_pain_002_32264.ogg" type="AudioStream" id=4]

[sub_resource type="CapsuleShape" id=1]
height = 0.25

[sub_resource type="CylinderShape" id=2]
height = 0.3
radius = 1.2

[sub_resource type="CylinderShape" id=5]
height = 1.0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ModelPivot/Model:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "dash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ModelPivot/Model:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 360 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ModelPivot/Model:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.9 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.1, 0 ), Vector3( 0, 0.4, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ModelPivot/Model:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -9.551, 0, 0 ), Vector3( 0.622502, 0, 0 ), Vector3( 11.4967, 2.98079, -0.603191 ), Vector3( 0.582003, 0, 0 ), Vector3( -10.1282, 2.65537, -0.69615 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "spin-y"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ModelPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 720, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ModelPivot/Model:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 0.999999, 0.999999 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "shrink"
tracks/0/type = "value"
tracks/0/path = NodePath("ModelPivot/Model:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 0.999999, 0.999999 ), Vector3( 0, 0, 0 ) ]
}

[node name="Player" type="KinematicBody" groups=["players"]]
collision_mask = 524366
script = ExtResource( 2 )
hurt_sound = ExtResource( 4 )

[node name="ModelPivot" type="Spatial" parent="."]

[node name="Model" parent="ModelPivot" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0.325, 0 )

[node name="CameraPivot" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Horizontal" type="Spatial" parent="CameraPivot"]

[node name="Vertical" type="Spatial" parent="CameraPivot/Horizontal"]

[node name="ClippedCamera" type="ClippedCamera" parent="CameraPivot/Horizontal/Vertical"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 10 )
current = true
process_mode = 1
collision_mask = 5

[node name="PlayerCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.7, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="EnemyDetector" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0 )
collision_layer = 0
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="EnemyDetector"]
shape = SubResource( 2 )

[node name="SpinArea" type="Area" parent="."]
collision_mask = 34
monitorable = false

[node name="SpinCollisionShape" type="CollisionShape" parent="SpinArea"]
transform = Transform( 2, 0, 0, 0, 0.25, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/RESET = SubResource( 8 )
anims/dash = SubResource( 9 )
anims/float = SubResource( 3 )
anims/spin-y = SubResource( 4 )

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/shrink = SubResource( 7 )

[node name="DashDurationTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="RayCasts" type="Spatial" parent="."]

[node name="RayCast" type="RayCast" parent="RayCasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1.75, -1.1 )
enabled = true
cast_to = Vector3( 0, -3, 0 )
collision_mask = 36
collide_with_areas = true

[node name="RayCast2" type="RayCast" parent="RayCasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.75, -1.1 )
enabled = true
cast_to = Vector3( 0, -3, 0 )
collision_mask = 36
collide_with_areas = true

[node name="RayCast3" type="RayCast" parent="RayCasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.75, 1.8 )
enabled = true
cast_to = Vector3( 0, -3, 0 )
collision_mask = 36
collide_with_areas = true

[node name="RayCast4" type="RayCast" parent="RayCasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1.75, 1.8 )
enabled = true
cast_to = Vector3( 0, -3, 0 )
collision_mask = 36
collide_with_areas = true

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="timeout" from="DashDurationTimer" to="." method="_on_DashDurationTimer_timeout"]
